# Apartment-Rent-Data

./: .gitignore  pyproject.toml
models/: models.config.json  models.dict  models.lda  models.lda.expElogbeta.npy  models.lda.id2word  models.lda.state
notebooks/: analytics.ipynb  categorical.ipynb  data_cleaning.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
paсkages/analysis/: README.md  pyproject.toml
paсkages/analysis/analysis/: LDA.py  README.md  __init__.py  categorical_dependence.py  coordinates.py  state_price_significance.py
paсkages/config/: README.md  pyproject.toml
paсkages/config/config/: settings.py
paсkages/experiments/: pyproject.toml
paсkages/logger/logger/: __init__.py  logger.py
paсkages/models/: pyproject.toml
paсkages/preprocessing/: README.md  pyproject.toml
paсkages/preprocessing/preprocessing/: __init__.py  categories_other.py  pipeline.py  preprocessor.py  price_monthly_column.py
paсkages/utils/: pyproject.toml
paсkages/utils/utils/: __init__.py  data_info.py  data_loader.py
